--- a/unity_JsonItem/Assets/UPM/package.json
+++ b/unity_JsonItem/Assets/UPM/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blueback.jsonitem",
   "displayName": "JsonItem",
-  "version": "0.0.7",
+  "version": "0.0.1",
   "unity": "2020.1",
   "description": "JSON操作",
   "author": {
@@ -14,8 +14,8 @@
   "dependencies": {},
   "samples": [
     {
-      "displayName": "ObjectToJson",
-      "path": "Samples~/ObjectToJson"
+      "displayName": "Simple",
+      "path": "Samples~/Simple"
     }
   ]
 }
