--- a/unity_JsonItem/Assets/UPM/package.json
+++ b/unity_JsonItem/Assets/UPM/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "blueback.jsonitem",
   "displayName": "JsonItem",
   "version": "0.0.3",
@@ -14,8 +14,8 @@
   "dependencies": {},
   "samples": [
     {
-      "displayName": "Simple",
-      "path": "Samples~/Simple"
+      "displayName": "Convert",
+      "path": "Samples~/Convert"
     }
   ]
 }
