--- a/unity_JsonItem/Packages/manifest.json
+++ b/unity_JsonItem/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "blueback.assetlib": "https://github.com/bluebackblue/AssetLib.git?path=unity_AssetLib/Assets/UPM",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.5",
