--- a/unity_JsonItem/Assets/UPM/package.json
+++ b/unity_JsonItem/Assets/UPM/package.json
@@ -1,21 +1,1 @@
-{
-  "name": "blueback.jsonitem",
-  "displayName": "JsonItem",
-  "version": "0.0.6",
-  "unity": "2020.1",
-  "description": "JSON操作",
-  "author": {
-    "name": "BlueBack",
-    "url": "https://github.com/bluebackblue"
-  },
-  "keywords": [
-    "JSON"
-  ],
-  "dependencies": {},
-  "samples": [
-    {
-      "displayName": "Convert",
-      "path": "Samples~/Convert"
-    }
-  ]
-}
+{"samples":[{"path":"Samples~/Convert","displayName":"Convert"}],"dependencies":{},"keyword":["json"],"author":{"url":"https://github.com/bluebackblue","name":"BlueBack"},"discription":"JSON操作","unity":"2020.1","version":"0.0.6","displayName":"JsonItem","name":"blueback.jsonitem"}
