--- a/unity_JsonItem/Packages/manifest.json
+++ b/unity_JsonItem/Packages/manifest.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "blueback.assetlib": "https://github.com/bluebackblue/AssetLib.git?path=unity_AssetLib/Assets/UPM",
-    "blueback.upmversionmanager": "https://github.com/bluebackblue/UpmVersionManager.git?path=unity_UpmVersionManager/Assets/UPM",
+    "blueback.code": "https://github.com/bluebackblue/Code.git?path=unity_Code/Assets/UPM",
+    "blueback.upmversionmanager": "https://github.com/bluebackblue/UpmVersionManager.git?path=unity_UpmVersionManager/Assets/UPM#0.0.8",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.8",
