--- a/BlueBackJsonItem/Assets/Editor/NewProjectParam.json
+++ b/BlueBackJsonItem/Assets/Editor/NewProjectParam.json
@@ -13,6 +13,7 @@
    "git_path":"unity_JsonItem/Assets/UPM",
    "git_author":"bluebackblue",
    "git_url":"https://github.com/",
+   "git_repos":"UpmJsonItem",
    "author_name":"BlueBack",
    "need_unity_version":"2020.1",
    "package_name":"JsonItem"
